<resources>
    <string name="app_name">Moon Edu</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="do_not_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="register">Đăng ký</string>
    <string name="already_have_an_account">Bạn đã có tài khoản?</string>
    <string name="emai">Email</string>
    <string name="home">Trang chủ</string>
    <string name="user">Cá nhân</string>
    <string name="discover">Khám phá</string>
    <string name="lesson">Bài học</string>
    <string name="all">Luyện tập</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_information">Chỉnh sửa thông tin</string>
</resources>