<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/action_discover"
        android:icon="@drawable/ic_compass"
        android:title="@string/discover" />
    <item
        android:id="@+id/action_universe"
        android:icon="@drawable/ic_universe"
        android:title="@string/lesson" />
    <item
        android:id="@+id/action_all"
        android:icon="@drawable/ic_target"
        android:title="@string/all" />
    <item
        android:id="@+id/action_user"
        android:icon="@drawable/icon_userx"
        android:title="@string/user" />
</menu>