<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#527394"
    tools:context=".Activity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bk_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerAc_ctLayout_main"
        android:layout_width="0dp"
        android:layout_height="440dp"
        android:background="@drawable/login_ac_bkt"
        android:minHeight="390dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/emai"
            android:textColor="#474747"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/registerAc_til_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerAc_til_email"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundMode="none"
            app:counterEnabled="true"
            app:counterOverflowTextColor="@color/color_main2"

            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerAc_et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_textinput"
                android:hint="@string/emai"
                android:inputType="text"
                android:maxLength="20"
                android:padding="10dp"
                android:paddingStart="55dp"
                android:soundEffectsEnabled="false"
                android:textColor="@color/color_main"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/color_main2"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="Mật khẩu"
            android:textColor="#474747"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/registerAc_til_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerAc_til_email" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/registerAc_til_email"
            app:layout_constraintTop_toTopOf="@+id/registerAc_til_email"
            app:srcCompat="@drawable/icon_userx" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerAc_til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            app:boxBackgroundMode="none"
            app:counterEnabled="true"
            app:counterOverflowTextColor="@color/color_main2"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/registerAc_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerAc_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_textinput"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="10dp"
                android:paddingStart="55dp"
                android:soundEffectsEnabled="false"
                android:textColor="@color/color_main"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/color_main2"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView41"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/registerAc_til_password"
            app:layout_constraintTop_toTopOf="@+id/registerAc_til_password"
            app:srcCompat="@drawable/icon_password" />

        <Button
            android:id="@+id/registerAc_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerAc_til_password" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerAc_btn_login">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#474747"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/registerAc_tv_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/registerAc_tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/login"
                android:textColor="@color/color_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView41"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/registerAc_ctLayout_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/moon_text_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>